src/test/resources/dev/blachut/svelte/lang/codeInsight/inspections/generics/GenericsWithWrongLang.svelte
<script lang="js"
<error descr="The 'generics' attribute requires 'lang=\" ts\"' on the script tag">generics</error>="T">
export let value;
</script>
